gke/smarp-backend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: smarp
  name: smarp-backend
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"80":"smarp-backendconfig"}}'
spec:
  type: NodePort
  selector:
    run: smarp
  ports:
  - port: 80
    targetPort: 80
